Approach added and alignment fixes

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -7,7 +7,7 @@
   z-index: 1000; /* Ensure it stays on top of other elements */
 
   @include mobile {
-    margin-top: 20px;
+    margin-top: 0px;
     position: sticky; /* Keeps the footer sticky on mobile */
   }
 
