--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -39,8 +39,17 @@
     .social{
         display: flex;
         gap: 30px;
+        margin-top: -20px;
+        
+@include mobile{
+    margin-right: 20px;
+}
         
         img{
+            &:hover{
+                transform: translateY(-2px);
+
+        }
             width: 18px;
             height: 18px;
         }
